syntax = "proto2";
package org.avrodite.proto;
option java_package = "org.avrodite.proto";
option java_outer_classname = "StockEvents";

message EventMeta {
  optional string id = 1;
  optional string parentId = 2;
  optional string correlation = 3;
}

message EquityMarketPriceEvent {
  optional EventMeta meta  = 1;
  optional Equity target   = 2;
  repeated EquityOrder ask = 3;
  repeated EquityOrder bid = 4;
}

message Equity {
  optional string ticker = 1;
  optional double price  = 2;
  optional int64 volume  = 3;
  optional double variation = 4;
}

message EquityOrder {
  optional int32 count = 1;
  optional double price = 2;
  optional int64 quantity = 3;
}

